Convert test classes to JUnit 4 and apply some trivial fixes & formatting from Tomcat 7 Non-trivial fixes will be in separate commits
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1713145 13f79535-47bb-0310-9956-ffa450edef68