@@ -16,21 +16,28 @@
  */
 package org.apache.catalina.tribes.group.interceptors;
 
-import org.apache.catalina.tribes.Channel;
-import org.apache.catalina.tribes.Member;
-import org.apache.catalina.tribes.group.GroupChannel;
-import junit.framework.TestCase;
-import junit.framework.TestResult;
-import junit.framework.TestSuite;
-import org.apache.catalina.tribes.ChannelListener;
 import java.io.Serializable;
-import org.apache.catalina.tribes.group.ChannelInterceptorBase;
-import org.apache.catalina.tribes.ChannelMessage;
-import org.apache.catalina.tribes.group.InterceptorPayload;
-import org.apache.catalina.tribes.ChannelException;
+import java.util.Queue;
+import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.concurrent.atomic.AtomicInteger;
 
-public class TestOrderInterceptor extends TestCase {
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.fail;
+
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Test;
+
+import org.apache.catalina.tribes.Channel;
+import org.apache.catalina.tribes.ChannelException;
+import org.apache.catalina.tribes.ChannelListener;
+import org.apache.catalina.tribes.ChannelMessage;
+import org.apache.catalina.tribes.Member;
+import org.apache.catalina.tribes.group.ChannelInterceptorBase;
+import org.apache.catalina.tribes.group.GroupChannel;
+import org.apache.catalina.tribes.group.InterceptorPayload;
+
+public class TestOrderInterceptor {
 
     GroupChannel[] channels = null;
     OrderInterceptor[] orderitcs = null;
@@ -38,9 +45,10 @@ public class TestOrderInterceptor extends TestCase {
     TestListener[] test = null;
     int channelCount = 2;
     Thread[] threads = null;
-    protected void setUp() throws Exception {
+
+    @Before
+    public void setUp() throws Exception {
         System.out.println("Setup");
-        super.setUp();
         channels = new GroupChannel[channelCount];
         orderitcs = new OrderInterceptor[channelCount];
         mangleitcs = new MangleOrderInterceptor[channelCount];
@@ -48,7 +56,7 @@ public class TestOrderInterceptor extends TestCase {
         threads = new Thread[channelCount];
         for ( int i=0; i<channelCount; i++ ) {
             channels[i] = new GroupChannel();
-            
+
             orderitcs[i] = new OrderInterceptor();
             mangleitcs[i] = new MangleOrderInterceptor();
             orderitcs[i].setExpire(Long.MAX_VALUE);
@@ -58,6 +66,7 @@ public class TestOrderInterceptor extends TestCase {
             channels[i].addChannelListener(test[i]);
             final int j = i;
             threads[i] = new Thread() {
+                @Override
                 public void run() {
                     try {
                         channels[j].start(Channel.DEFAULT);
@@ -72,32 +81,34 @@ public class TestOrderInterceptor extends TestCase {
         for ( int i=0; i<channelCount; i++ ) threads[i].join();
         Thread.sleep(1000);
     }
-    
+
+    @Test
     public void testOrder1() throws Exception {
         Member[] dest = channels[0].getMembers();
         final AtomicInteger value = new AtomicInteger(0);
         for ( int i=0; i<100; i++ ) {
-            channels[0].send(dest,new Integer(value.getAndAdd(1)),0);
+            channels[0].send(dest,Integer.valueOf(value.getAndAdd(1)),0);
         }
         Thread.sleep(5000);
         for ( int i=0; i<test.length; i++ ) {
-            super.assertEquals(false,test[i].fail);
+            assertFalse(test[i].fail);
         }
     }
-    
+
+    @Test
     public void testOrder2() throws Exception {
         final Member[] dest = channels[0].getMembers();
         final AtomicInteger value = new AtomicInteger(0);
+        final Queue<Exception> exceptionQueue = new ConcurrentLinkedQueue<Exception>();
         Runnable run = new Runnable() {
             public void run() {
                 for (int i = 0; i < 100; i++) {
                     try {
                         synchronized (channels[0]) {
-                            channels[0].send(dest, new Integer(value.getAndAdd(1)), 0);
+                            channels[0].send(dest, Integer.valueOf(value.getAndAdd(1)), 0);
                         }
                     }catch ( Exception x ) {
-                        x.printStackTrace();
-                        assertEquals(true,false);
+                        exceptionQueue.add(x);
                     }
                 }
             }
@@ -112,27 +123,28 @@ public class TestOrderInterceptor extends TestCase {
         for (int i=0;i<threads.length;i++) {
             threads[i].join();
         }
+        if (!exceptionQueue.isEmpty()) {
+            fail("Exception while sending in threads: "
+                    + exceptionQueue.remove().toString());
+        }
         Thread.sleep(5000);
         for ( int i=0; i<test.length; i++ ) {
-            super.assertEquals(false,test[i].fail);
+            assertFalse(test[i].fail);
         }
     }
 
-
-    protected void tearDown() throws Exception {
+    @After
+    public void tearDown() throws Exception {
         System.out.println("tearDown");
-        super.tearDown();
         for ( int i=0; i<channelCount; i++ ) {
             channels[i].stop(Channel.DEFAULT);
         }
     }
-    
-    public static void main(String[] args) throws Exception {
-        TestSuite suite = new TestSuite();
-        suite.addTestSuite(TestOrderInterceptor.class);
-        suite.run(new TestResult());
+
+    public static void main(String[] args) {
+        org.junit.runner.JUnitCore.main(TestOrderInterceptor.class.getName());
     }
-    
+
     public static class TestListener implements ChannelListener {
         int id = -1;
         public TestListener(int id) {
@@ -140,7 +152,7 @@ public class TestOrderInterceptor extends TestCase {
         }
         int cnt = 0;
         int total = 0;
-        boolean fail = false;
+        volatile boolean fail = false;
         public synchronized void messageReceived(Serializable msg, Member sender) {
             total++;
             Integer i = (Integer)msg;
@@ -154,11 +166,11 @@ public class TestOrderInterceptor extends TestCase {
             return (msg instanceof Integer);
         }
     }
-    
+
     public static class MangleOrderInterceptor extends ChannelInterceptorBase {
-        int cnt = 1;
         ChannelMessage hold = null;
         Member[] dest = null;
+        @Override
         public synchronized void sendMessage(Member[] destination, ChannelMessage msg, InterceptorPayload payload) throws ChannelException {
             if ( hold == null ) {
                 //System.out.println("Skipping message:"+msg);
@@ -175,9 +187,6 @@ public class TestOrderInterceptor extends TestCase {
             }
         }
     }
-    
-    
-    
-    
+
 
 }
